# sensorpush_local

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  renovate.json  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.forgejo/workflows/: ci.yml  release.yml  renovate.yml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  tests.yml
custom_components/sensorpush_local/: __init__.py  config_flow.py  const.py  diagnostics.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/sensorpush_local/translations/: en.json
docs/superpowers/plans/: 2026-07-17-forgejo-migration.md
docs/superpowers/specs/: 2026-07-17-forgejo-migration-design.md
tests/: __init__.py  conftest.py  const.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_sensor.py  test_sensor_entities.py
