[project]
name = "sensorpush_local"
version = "1.0.3"
description = "Local Bluetooth monitoring for SensorPush devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "homeassistant==2026.2.3",
    "bleak-retry-connector==4.6.0",
    # aiousbwatcher and pyserial are not used directly by this integration
    # but are hard-imported by homeassistant.components.usb (pulled in via
    # the bluetooth stack). HA's wheel does not declare them in install_requires
    # so pip will not install them transitively. Do not remove these.
    "aiousbwatcher==1.1.2",
    "pyserial==3.5",
]

[project.optional-dependencies]
test = [
    "pytest-homeassistant-custom-component==0.13.316",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "argcomplete==3.7.0",
    "black==26.5.1",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.4",
    "isort==8.0.1",
    "pylint==4.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"
log_cli = "true"
log_cli_level = "DEBUG"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:inotify is a Linux and FreeBSD API:UserWarning",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
