[project]
name = "sensorpush_local"
version = "1.0.3"
description = "Local Bluetooth monitoring for SensorPush devices"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant==2026.2.3",
    "bleak-retry-connector==4.6.0",
    # habluetooth is transitive (pulled in by bleak-retry-connector and
    # homeassistant) but pinned explicitly so it's a named package Renovate's
    # "home assistant ecosystem" group can --upgrade-package too. Without
    # this, `uv lock --upgrade-package homeassistant ...` leaves habluetooth
    # frozen at whatever's already locked, since neither declared dependency
    # forces a version new enough — it just satisfies their loose metadata
    # constraint without being runtime-compatible.
    "habluetooth==6.1.0",
    # aiousbwatcher and pyserial are not used directly by this integration
    # but are hard-imported by homeassistant.components.usb (pulled in via
    # the bluetooth stack). HA's wheel does not declare them in install_requires
    # so pip will not install them transitively. Do not remove these.
    "aiousbwatcher==1.1.2",
    "pyserial==3.5",
    # serialx and aioesphomeapi: not needed by homeassistant==2026.2.3 (no
    # reference in its usb component today), but a later HA release's usb
    # component hard-imports serialx, which itself imports aioesphomeapi —
    # same undeclared-transitive-dependency pattern as aiousbwatcher/pyserial
    # above. Pre-declared now so the "home assistant ecosystem" Renovate
    # group (see renovate.json) doesn't hit a fresh ModuleNotFoundError the
    # next time homeassistant bumps far enough to need them.
    "serialx==1.8.2",
    "aioesphomeapi==40.0.0",
]

[project.optional-dependencies]
test = [
    "pytest-homeassistant-custom-component==0.13.316",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "argcomplete==3.7.0",
    "black==26.5.1",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.4",
    "isort==8.0.1",
    "pylint==4.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"
log_cli = "true"
log_cli_level = "DEBUG"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:inotify is a Linux and FreeBSD API:UserWarning",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
